# ae-52mm-gauge

./: .gitignore  README.md  platformio.ini
lib/lvgl-8.3.6/: lv_conf.h
lib/mf_Lvgl/: lv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt
lib/ui/src/: CMakeLists.txt  filelist.txt  ui 2.h  ui.c  ui.cpp  ui.h  ui_batteryScreen.c  ui_batteryScreen.h  ui_bootInitialScreen.c  ui_bootInitialScreen.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1105680357.c  ui_img_1209853138.c  ui_img_1749172309.c  ui_img_1917549703.c  ui_img_1965588767.c  ui_img_2022370193.c  ui_img_2056808699.c  ui_img_2104900491.c  ui_img_2105704960.c  ui_img_2930172.c  ui_img_501072417.c  ui_img_539538216.c  ui_img_699809084.c  ui_img_807091229.c  ui_img_943648365.c  ui_img_ae_white_128_png.c  ui_temperatureScreen.c  ui_temperatureScreen.h  ui_tpmsScreen.c  ui_tpmsScreen.h
lib/ui/src/components/: ui_comp_hook.c
lib/ui/src/images/: ui_img_1105680357.c  ui_img_1209853138.c  ui_img_1749172309.c  ui_img_1917549703.c  ui_img_2022370193.c  ui_img_2056808699.c  ui_img_2104900491.c  ui_img_2105704960.c  ui_img_2930172.c  ui_img_501072417.c  ui_img_539538216.c  ui_img_807091229.c  ui_img_943648365.c  ui_img_ae_white_128_png.c  ui_img_ae_white_96_png.c
lib/ui/src/screens/: ui_Screen2.c  ui_batteryScreen.c  ui_batteryScreen.cpp  ui_batteryScreen.h  ui_bootInitialScreen.c  ui_bootInitialScreen.cpp  ui_bootInitialScreen.h  ui_coolantScreen.c  ui_coolantScreen.h  ui_oilScreen.c  ui_oilScreen.h  ui_turboExhaustScreen.c  ui_turboExhaustScreen.h
releases/v1.2.3/: gauge_v1.2.3_hw2.json
scripts/: build_release.sh
src/: ble_handler.cpp  ble_handler.h  encoder.cpp  encoder.h  main.cpp  pairing_handler.cpp  pairing_handler.h  shared_data.h  shared_defs.h  tpms_handler.cpp  tpms_handler.h
ui/: ae_52mm_gauge.sll  ae_52mm_gauge.slp  ae_52mm_gauge.spj  ae_52mm_gauge_events.py  project.info
ui/assets/: ui_font_AE64BOLD.c  ui_font_AE64BOLD.fcfg
ui/old_files/: ui.cpp  (+3 more)
(+6 files in other folders)
